docs/0.5.2/_sources/generated/skbio.sequence.RNA.rst.txt
skbio\.sequence\.RNA
====================

.. currentmodule:: skbio.sequence

.. autoclass:: RNA

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         
         RNA.__bool__
         
         RNA.__contains__
         
         RNA.__copy__
         
         RNA.__deepcopy__
         
         
         RNA.__eq__
         
         RNA.__format__
         
         RNA.__getitem__
         
         
         RNA.__iter__
         
         RNA.__len__
         
         RNA.__ne__
         
         
         
         
         
         RNA.__reversed__
         
         
         RNA.__str__
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         RNA.complement
         
         RNA.concat
         
         RNA.count
         
         RNA.definites
         
         RNA.degap
         
         RNA.degenerates
         
         RNA.distance
         
         RNA.expand_degenerates
         
         RNA.find_motifs
         
         RNA.find_with_regex
         
         RNA.frequencies
         
         RNA.gaps
         
         RNA.gc_content
         
         RNA.gc_frequency
         
         RNA.has_definites
         
         RNA.has_degenerates
         
         RNA.has_gaps
         
         RNA.has_interval_metadata
         
         RNA.has_metadata
         
         RNA.has_nondegenerates
         
         RNA.has_positional_metadata
         
         RNA.index
         
         RNA.is_reverse_complement
         
         RNA.iter_contiguous
         
         RNA.iter_kmers
         
         RNA.kmer_frequencies
         
         RNA.lowercase
         
         RNA.match_frequency
         
         RNA.matches
         
         RNA.mismatch_frequency
         
         RNA.mismatches
         
         RNA.nondegenerates
         
         RNA.read
         
         RNA.replace
         
         RNA.reverse_complement
         
         RNA.reverse_transcribe
         
         RNA.to_regex
         
         RNA.translate
         
         RNA.translate_six_frames
         
         RNA.write



   

